tests/ui/assumptions_on_binders/type_relation_binders_inside_solver-3.stderr
error[E0277]: the trait bound `for<'b> fn(&'b ()): Trait` is not satisfied
  --> $DIR/type_relation_binders_inside_solver-3.rs:17:5
   |
LL |     (for<'b> fn(&'b ())): Trait
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^ the trait `Trait` is not implemented for `for<'b> fn(&'b ())`
   |
help: this trait has no implementations, consider adding one
  --> $DIR/type_relation_binders_inside_solver-3.rs:9:1
   |
LL | trait Trait { }
   | ^^^^^^^^^^^
help: add `#![feature(trivial_bounds)]` to the crate attributes to enable
   |
LL + #![feature(trivial_bounds)]
   |

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0277`.
